add bars to basic2 example

--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -53,6 +53,8 @@
           "id": "box",
           "type": "box",
           "label": "Box 1",
+          "start": 0,
+          "end": 4.0,
           "properties": [
             {
               "name": "x",
@@ -111,6 +113,8 @@
           "id": "box2",
           "type": "box",
           "label": "Box 2",
+          "start": 0,
+          "end": 4.3,
           "properties": [
             {
               "name": "x",
