Add public methods in TweenTime to work with items, properties, keys and values, fix #2

--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -75,7 +75,7 @@
               "name": "y",
               "keys": [
                 {
-                  "time": 0.016000000000000014,
+                  "time": 0,
                   "val": 0,
                   "ease": "Quad.easeOut"
                 },
@@ -135,7 +135,7 @@
               "name": "y",
               "keys": [
                 {
-                  "time": 0.016000000000000014,
+                  "time": 0,
                   "val": 0,
                   "ease": "Quad.easeOut"
                 },
