--- a/examples/basic_interactive.html
+++ b/examples/basic_interactive.html
@@ -107,7 +107,48 @@
       var tweenTime = new window.TweenTime(data);
       var editor = new Editor(tweenTime);
 
+      var box_data = tweenTime.getItem('box');
       var box_values = tweenTime.getValues('box');
+
+      var is_dragging = false;
+      var mouse_position = {x: 0, y: 0};
+      var origin_values = {x: 0, y: 0};
+
+      // Get the properties object.
+      var xprop = tweenTime.getProperty('x', 'box');
+      var yprop = tweenTime.getProperty('y', 'box');
+
+      $('.box').mousedown(function(e) {
+        is_dragging = true;
+        // Get the mouse position on click.
+        mouse_position.x = e.clientX;
+        mouse_position.y = e.clientY;
+        // And the original box values.
+        origin_values.x = box_values.x;
+        origin_values.y = box_values.y;
+
+      });
+
+      $(window).mousemove(function(e) {
+        if (!is_dragging) {
+          return;
+        }
+        var diff = {x: e.clientX - mouse_position.x, y: e.clientY - mouse_position.y};
+        // New values
+        var new_val = {x: origin_values.x + diff.x, y: origin_values.y + diff.y};
+
+        tweenTime.setValue(xprop, new_val.x);
+        tweenTime.setValue(yprop, new_val.y);
+
+        // force the timeline to update.
+        editor.timeline.isDirty = true;
+        // And mark the box data as dirty to update the values.
+        box_data.isDirty = true;
+      });
+
+      $(window).mouseup(function(e) {
+        is_dragging = false;
+      });
 
       function animate() {
         $('.box').css({
