Add label mask for key--preview, fix #12

--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -115,6 +115,7 @@
           "label": "Box 2",
           "start": 0,
           "end": 4.3,
+          "collapsed": true,
           "properties": [
             {
               "name": "x",
