style a default .content-wrapper to take 100% width/height, fix #25

--- a/examples/advanced__empty.html
+++ b/examples/advanced__empty.html
@@ -13,9 +13,6 @@
       body {
         background: #efefef;
       }
-      .wrapper {
-        margin-right: 281px;
-      }
       .thumb {
         position: relative;
         width: 220px;
@@ -83,7 +80,7 @@
     </style>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="content-wrapper">
       <figure class="thumb">
         <div class="thumb__top">
           <div class="thumb__image">
