--- a/examples/basic.html
+++ b/examples/basic.html
@@ -24,7 +24,9 @@
     </style>
   </head>
   <body>
-    <div class="box"></div>
+    <div class="content-wrapper">
+      <div class="box"></div>
+    </div>
 
     <!-- TweenTime dependencies -->
     <script src="../src/scripts/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
