--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -28,8 +28,10 @@
     </style>
   </head>
   <body>
-    <div class="box box--blue"></div>
-    <div class="box box--red"></div>
+    <div class="content-wrapper">
+      <div class="box box--blue"></div>
+      <div class="box box--red"></div>
+    </div>
 
     <!-- TweenTime dependencies -->
     <script src="../src/scripts/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
