--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -13,9 +13,6 @@
       body {
         background: #efefef;
       }
-      .wrapper {
-        margin-right: 281px;
-      }
       .thumb {
         position: relative;
         width: 220px;
@@ -85,7 +82,7 @@
     </style>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="content-wrapper">
       <figure class="thumb">
         <div class="thumb__top">
           <div class="thumb__image">
