--- a/examples/grouping.html
+++ b/examples/grouping.html
@@ -52,6 +52,8 @@
           "id": "box",
           "type": "box",
           "label": "Box 1",
+          "start": 0,
+          "end": 4,
           "properties": [
             {
               "name": "x",
