--- a/examples/grouping.html
+++ b/examples/grouping.html
@@ -31,17 +31,18 @@
     <!-- TweenTime dependencies -->
     <script src="../src/scripts/bower_components/gsap/src/uncompressed/TweenMax.js"></script>
     <script src="../src/scripts/bower_components/gsap/src/uncompressed/TimelineMax.js"></script>
+    <script src="../src/scripts/bower_components/js-signals/dist/signals.js"></script>
 
     <!-- Editor dependencies -->
     <script src="../src/scripts/bower_components/jquery/dist/jquery.js"></script>
+    <script src="../src/scripts/bower_components/spectrum/spectrum.js"></script>
     <script src="../src/scripts/bower_components/d3/d3.js"></script>
     <script src="../src/scripts/bower_components/lodash/dist/lodash.js"></script>
-    <script src="../src/scripts/bower_components/mustache.js/mustache.js"></script>
     <script src="../src/scripts/bower_components/draggable-number.js/dist/draggable-number.js"></script>
 
     <!-- TweenTime & Editor -->
-    <script src="../dist/scripts/TweenTime.js"></script>
-    <script src="../dist/scripts/Editor.js"></script>
+    <script src="../dist/scripts/TweenTime.Core.js"></script>
+    <script src="../dist/scripts/TweenTime.Editor.js"></script>
 
     <!-- Example script -->
     <script>
@@ -50,6 +51,8 @@
           "id": "box",
           "type": "box",
           "label": "Box 1",
+          "start": 0,
+          "end": 4,
           "properties": [
             {
               "name": "x",
@@ -147,8 +150,8 @@
         }
       ];
 
-      var tweenTime = new window.TweenTime(data);
-      var editor = new Editor(tweenTime);
+      var tweenTime = new TweenTime.Core(data);
+      var editor = new TweenTime.Editor(tweenTime);
 
       var box_values = tweenTime.getValues('box');
 
