--- a/examples/basic_interactive.html
+++ b/examples/basic_interactive.html
@@ -41,8 +41,8 @@
     <script src="../src/scripts/bower_components/draggable-number.js/dist/draggable-number.js"></script>
 
     <!-- TweenTime & Editor -->
-    <script src="../dist/scripts/TweenTime.Core.js"></script>
-    <script src="../dist/scripts/TweenTime.Editor.js"></script>
+    <script src="../dist/scripts/TweenTime.Core.min.js"></script>
+    <script src="../dist/scripts/TweenTime.Editor.min.js"></script>
 
     <!-- Example script -->
     <script>
