Min/Max parameters in properties, fix #35

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -159,7 +159,9 @@
                   "ease": "Linear.easeNone"
                 }
               ],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ],
           "values": {
@@ -183,7 +185,9 @@
                   "ease": "Linear.easeNone"
                 }
               ],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             },
             {
               "name": "y",
@@ -252,7 +256,9 @@
                   "ease": "Quad.easeOut"
                 }
               ],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ],
           "values": {
@@ -281,7 +287,9 @@
                   "val": 1
                 }
               ],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ],
           "values": {
