--- a/examples/advanced__empty.html
+++ b/examples/advanced__empty.html
@@ -134,7 +134,9 @@
             {
               "name": "opacity",
               "keys": [],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ]
         },
@@ -145,7 +147,9 @@
             {
               "name": "opacity",
               "keys": [],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             },
             {
               "name": "y",
@@ -177,7 +181,9 @@
             {
               "name": "opacity",
               "keys": [],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ]
         },
@@ -193,7 +199,9 @@
             {
               "name": "opacity",
               "keys": [],
-              "val": 0
+              "val": 0,
+              "min": 0,
+              "max": 1
             }
           ]
         }
