--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -108,7 +108,9 @@
                   "ease": "Quad.easeOut"
                 }
               ],
-              "val": 1
+              "val": 1,
+              "min": 0,
+              "max": 1
             }
           ]
         },
@@ -169,7 +171,9 @@
                   "ease": "Quad.easeOut"
                 }
               ],
-              "val": 1
+              "val": 1,
+              "min": 0,
+              "max": 1
             }
           ]
         }
