--- a/examples/grouping.html
+++ b/examples/grouping.html
@@ -136,7 +136,9 @@
                   "ease": "Quad.easeOut"
                 }
               ],
-              "val": 1
+              "val": 1,
+              "min": 0,
+              "max": 1
             }
           ],
           "values": {
