--- a/examples/basic_interactive.html
+++ b/examples/basic_interactive.html
@@ -101,7 +101,9 @@
                   "ease": "Quad.easeOut"
                 }
               ],
-              "val": 1
+              "val": 1,
+              "min": 0,
+              "max": 1
             }
           ]
         }
