Add an option to Editor to set the totalDuration at creation time, fix #33

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -298,7 +298,9 @@
           }
         }
       ];
-      var tweenTime = new TweenTime.Core(data);
+      var tweenTime = new TweenTime.Core(data, {
+        totalDuration: 10000 // in milliseconds
+      });
       var editor = new TweenTime.Editor(tweenTime);
 
       $img = $('.thumb__image img');
