Fix file-saver dependency issue

--- a/examples/speed.html
+++ b/examples/speed.html
@@ -37,6 +37,7 @@
     <script src="../src/scripts/bower_components/d3/d3.js"></script>
     <script src="../src/scripts/bower_components/lodash/lodash.js"></script>
     <script src="../src/scripts/bower_components/draggable-number.js/dist/draggable-number.js"></script>
+    <script src="../src/scripts/bower_components/file-saver/FileSaver.js"></script>
 
     <!-- TweenTime & Editor -->
     <script src="../dist/scripts/TweenTime.Core.min.js"></script>
