remove user-select:all

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -119,15 +119,15 @@
 
       var box_values = tweenTime.getValues('box');
 
-      function animate() {
-        $('.box').css({
-          'opacity': box_values.opacity,
-          'transform': 'translate(' + box_values.x + 'px, ' + box_values.y + 'px)'
-        });
-        window.requestAnimationFrame(animate);
-      }
+      // function animate() {
+      //   $('.box').css({
+      //     'opacity': box_values.opacity,
+      //     'transform': 'translate(' + box_values.x + 'px, ' + box_values.y + 'px)'
+      //   });
+      //   window.requestAnimationFrame(animate);
+      // }
 
-      animate();
+      // animate();
     </script>
   </body>
 </html>
