--- a/examples/basic.html
+++ b/examples/basic.html
@@ -124,7 +124,8 @@
           'opacity': box_values.opacity,
           'transform': 'translate(' + box_values.x + 'px, ' + box_values.y + 'px)'
         });
-        console.log(tweenTime.getCurrentTime());
+        // console.log(tweenTime.getCurrentTime());
+        console.log(tweenTime.getData());
         window.requestAnimationFrame(animate);
       }
 
