Use curve easing in basic2 example

--- a/examples/basic2.html
+++ b/examples/basic2.html
@@ -58,7 +58,7 @@
           "type": "box",
           "label": "Box 1",
           "start": 0,
-          "end": 4.0,
+          "end": 4,
           "properties": [
             {
               "name": "x",
@@ -86,12 +86,22 @@
                 {
                   "time": 0.9870000000000003,
                   "val": 50,
-                  "ease": "Cubic.easeInOut"
+                  "ease": [
+                    0.14184397163120563,
+                    0.9105263157894737,
+                    0.6271529888551163,
+                    1.1105263157894736
+                  ]
                 },
                 {
                   "time": 2.006,
                   "val": 0,
-                  "ease": "Quad.easeInOut"
+                  "ease": [
+                    0.9254170755642788,
+                    0.3157894736842105,
+                    0.2051030421982333,
+                    0.9473684210526315
+                  ]
                 }
               ],
               "val": 0
@@ -113,7 +123,12 @@
               "min": 0,
               "max": 1
             }
-          ]
+          ],
+          "values": {
+            "x": 0,
+            "y": 0,
+            "opacity": 1
+          }
         },
         {
           "id": "box2",
@@ -176,7 +191,12 @@
               "min": 0,
               "max": 1
             }
-          ]
+          ],
+          "values": {
+            "x": 0,
+            "y": 0,
+            "opacity": 1
+          }
         }
       ];
 
